lms > 게시판관리 첨부파일 삭제 버튼 추가

--- a/public/css/lcms/custom.css
+++ b/public/css/lcms/custom.css
@@ -923,6 +923,11 @@ table.dataTable tbody>tr.selected, table.dataTable tbody>tr>.selected {
     text-align: center;
     cursor: pointer;
 }
+.filetype .file-reset {
+    position: relative;
+    float: right;
+    z-index: 10;
+}
 
 /* modal seat */
 #mem_seat_list tr th ul li {
