css 수정 업로드2

--- a/public/css/willbes/style.css
+++ b/public/css/willbes/style.css
@@ -8683,6 +8683,7 @@ table.testTable tr td.w-date {
 .pointTable tr td.w-period {
     line-height: 16px;
     padding: 10px 0;
+    word-break: keep-all;
 }
 
 /* subContainer : Mypage : 학습지원관리 : 쪽지관리 */
