--- a/public/css/willbes/basic.css
+++ b/public/css/willbes/basic.css
@@ -512,6 +512,9 @@ select[disabled] {
 .h960 {
   height: 960px !important;
 }
+.h990 {
+  height: 990px !important;
+}
 .h1100 {
   height: 1100px !important;
 }
@@ -722,6 +725,9 @@ select[disabled] {
   padding-left: 135px !important;
 }
 
+.pr10 {
+  padding-right: 10px !important;
+}
 .pr20 {
   padding-right: 20px !important;
 }
@@ -1001,6 +1007,10 @@ select[disabled] {
 }
 .line-through {
   text-decoration: line-through !important;
+}
+.of-hidden {
+  overflow-x: hidden;
+  overflow-y: auto;
 }
 .caution-txt {
   background: url("../../img/willbes/sub/icon_caution.gif") no-repeat 0 center;
