--- a/public/css/willbes/style.css
+++ b/public/css/willbes/style.css
@@ -2865,6 +2865,12 @@ table.auTable tr td {
     clear: both;
     border-bottom: 1px solid #c9c9c9;
 }
+.willbes-Lec-Table-Overflow {
+    overflow-x: hidden;
+    overflow-y: auto;
+    width: 940px;
+    height: 484px;
+}
 
 /* subContainer : Content : Lec-Table : d_block */
 .willbes-Lec-Table.d_block {
@@ -3005,6 +3011,13 @@ table.lecTable tr td .MoreBtn {
 /* subContainer : Content : lecWrapTable */
 table.lecWrapTable {
     width: 100%;
+}
+table.lecWrapTable.lec-essential,
+table.lecWrapTable.lec-choice {
+    overflow-x: hidden;
+    overflow-y: auto;
+    height: 484px;
+    display: block;
 }
 table.lecWrapTable .willbes-Lec-Table {
     border-bottom: none;
@@ -6121,6 +6134,9 @@ ul li.profList .willbes-Layer-ProfileBox {
 .tabWrap.tabDepthProf_5 li {
     width: 20%;
 }
+.tabWrap.tabDepthProf_6 li {
+    width: 16.66666666%;
+}
 .tabWrap.tabDepthProf li a {
     display: block;
     width: 100%;
@@ -6349,10 +6365,17 @@ ul li.profList .willbes-Layer-ProfileBox {
 .waitBox {
     border: 1px solid #adadad;
     color: #636363;
+    background: #fff;
 }
 .answerBox {
     border: 1px solid #5ab6eb;
     color: #1a8bcc;
+    background: #fff;
+}
+.finishBox {
+    border: 1px solid #ed1c24;
+    color: #ed1c24;
+    background: #fff;
 }
 .waitBox_block {
     border: 1px solid #4b4b51;
@@ -7974,6 +7997,107 @@ table.PassZoneTable .w-data {
     line-height: 25px;
 }
 
+/* subContainer : Mypage : 무한PASS존 : 첨삭 강좌 */
+.editTableList {
+    margin-bottom: 20px;
+    height: 750px;
+    overflow-x: hidden;
+    overflow-y: auto;
+}
+.editTableList.hover {
+    width: 713px;
+    padding-right: 8px;
+}
+.editTableList .listTable tr th,
+.editTableList .listTable tr td {
+    line-height: 25px;
+    padding: 7px 0;
+}
+.editTableList .listTable tr td ul.up-file li {
+    border-top: 1px solid #edeeef;
+    height: 40px;
+    line-height: 40px;
+    padding-left: 15px;
+}
+.editTableList .listTable tr td ul.up-file li:first-child {
+    border-top: none;
+}
+.editTableList .listTable tr td .MoreBtn {
+    float: right;
+}
+.editTableList .listTable tr td .MoreBtn a {
+    border: 1px solid #ccc;
+    padding: 5px 9px;
+    color: #707070;
+}
+.editTableList .listTable tr td .MoreBtn a .arrow-Btn {
+    background: url("../../img/willbes/gnb/icon_arrow.gif") no-repeat -20px 0;
+    width: 9px;
+    height: 8px;
+    margin-left: 7px;
+    margin-top: -1px;
+}
+.editTableList.hover .listTable tr td .MoreBtn a .arrow-Btn {
+    background: url("../../img/willbes/gnb/icon_arrow.gif") no-repeat -20px -12px;
+}
+
+
+
+
+
+
+.EditWriteTable .listTable {
+    clear: both;
+}
+.EditWriteTable .listTable tr th,
+.EditWriteTable .listTable tr td {
+    text-align: center;
+    line-height: 40px;
+    letter-spacing: 0;
+}
+.EditWriteTable .listTable thead tr th,
+.EditWriteTable .listTable thead tr td {
+    background: #f9f9f9;
+}
+.EditWriteTable .listTable thead tr td {
+    border-top: 1px solid #edeeef;
+}
+.EditWriteTable .listTable tr th .row-line,
+.EditWriteTable .listTable tr td .row-line {
+    float: right;
+    background: #e4e4e4;
+    width: 1px;
+    height: 11px;
+    margin: 14px 0;
+}
+.EditWriteTable tr td.w-text input {
+    width: 100%;
+    height: 25px;
+    border: 1px solid #d4d4d4;
+}
+.EditWriteTable tr td.w-textarea {
+    padding: 15px 0;
+}
+.EditWriteTable tr td.w-textarea textarea {
+    width: 100%;
+    height: 170px;
+    border: 1px solid #d4d4d4;
+    resize: none;
+    vertical-align: middle;
+    padding: 20px;
+    line-height: 16px;
+}
+.EditWriteTable tr td.w-file {
+    padding: 15px;
+    line-height: 22px;
+}
+.EditWriteTable ul.attach li .filetype {
+    margin-bottom: 10px;
+}
+.EditWriteTable ul.attach li .filetype .file-text {
+    width: 390px;
+}
+
 /* subContainer : Mypage : 온라인강좌 : willbes-Mypage-Txt */
 .willbes-Mypage-Txt {
     background: #f8f8f8;
@@ -8001,6 +8125,8 @@ table.PassZoneTable .w-data {
     padding: 20px 40px;
 }
 .willbes-Mypage-Txt table.txtTable tr .Tit {
+    float: left;
+    width: 100%;
     display: block;
     font-size: 14px;
     border-bottom: 1px solid #e0e0e0;
@@ -8008,9 +8134,21 @@ table.PassZoneTable .w-data {
     margin-bottom: 10px;
     line-height: 14px;
 }
+.willbes-Mypage-Txt table.txtTable tr .SubTit {
+    clear: both;
+    margin-bottom: 10px;
+}
 .willbes-Mypage-Txt table.txtTable tr .Txt {
+    float: left;
+    width: 100%;
     padding-left: 15px;
 }
+.willbes-Mypage-Txt table.txtTable tr .Txt .SubTxt {
+    float: left;
+    line-height: 22px;
+    margin-left: 10px;
+}
+
 .willbes-Mypage-Txt table.txtTable tr td {
     width: 860px;
     text-align: left;
