--- a/public/css/willbes/style.css
+++ b/public/css/willbes/style.css
@@ -7998,17 +7998,18 @@ table.PassZoneTable .w-data {
 }
 
 /* subContainer : Mypage : 무한PASS존 : 첨삭 강좌 */
-.editTableList {
-    margin-bottom: 20px;
-    height: 750px;
+.editTableList-overflow {
+    height: 680px;
     overflow-x: hidden;
     overflow-y: auto;
+}
+.editTableList {
+    margin-bottom: 20px;
 }
 .editTableList.hover {
     width: 713px;
     padding-right: 8px;
 }
-.editTableList .listTable tr th,
 .editTableList .listTable tr td {
     line-height: 25px;
     padding: 7px 0;
@@ -8042,10 +8043,7 @@ table.PassZoneTable .w-data {
 }
 
 
-
-
-
-
+/* subContainer : Mypage : 무한PASS존 : 첨삭 강좌 : 답안작성 */
 .EditWriteTable .listTable {
     clear: both;
 }
@@ -8080,7 +8078,7 @@ table.PassZoneTable .w-data {
 }
 .EditWriteTable tr td.w-textarea textarea {
     width: 100%;
-    height: 170px;
+    height: 120px;
     border: 1px solid #d4d4d4;
     resize: none;
     vertical-align: middle;
@@ -8097,6 +8095,14 @@ table.PassZoneTable .w-data {
 .EditWriteTable ul.attach li .filetype .file-text {
     width: 390px;
 }
+
+/* subContainer : Mypage : 무한PASS존 : 채점결과 */
+.editDetailWrap .editTable tr td ul.up-file li {
+    padding-left: 30px;
+}
+
+
+
 
 /* subContainer : Mypage : 온라인강좌 : willbes-Mypage-Txt */
 .willbes-Mypage-Txt {
