--- a/public/css/willbes/style.css
+++ b/public/css/willbes/style.css
@@ -9324,22 +9324,42 @@ table.acadlecInfoPackageTable tr.Top td {
     color: #9c3eb4;
     border-color: #9c3eb4;
 }
-.w-thumb {}
+
 .w-thumb a.thumb_num {
     position: absolute;
-    bottom: 23px;
-    right: 10px;
+    bottom: 20px;
+    left: 110px;
     background: #f90;
     width: 20px;
     height: 20px;
 }
+.w-thumb .thumb_rollover {
+    float: left;
+    margin: 0 10px;
+}
 .w-thumb .thumb_slide_wrap {
     display: none;
     position: absolute;
-    background: #f00;
-    top: 10px;
+    top: 20px;
+    left: 10px;
+    width: auto;
+    overflow: hidden;
+}
+.w-thumb .thumb_slide_wrap ul {
+    float: left;
+    width: 600px;
+    overflow: hidden;
+    padding: 10px;
+    background: #fff;
+    border: 1px solid #000;
 }
 .w-thumb .thumb_slide_wrap ul li {
+    float: left;
+    width: 70px;
+    height: 70px;
+    background: #0d56ae;
+}
+.w-thumb .thumb_txt {
     float: left;
 }
 
