--- a/public/css/willbes/style.css
+++ b/public/css/willbes/style.css
@@ -640,7 +640,7 @@ table.auTable tr td {
     border-right: 1px solid #aeaeae;
     color: #383838;
     letter-spacing: -1px;
-    z-index: 100;
+    z-index: 102;
 }
 #Gnb .toggle-Btn {
     position: absolute;
@@ -3240,6 +3240,27 @@ table.lecWrapTable .lecInfoTable .w-sub .w-subtit {
     width: 100%;
     height: 100%;
 }
+
+/* ================================================== */
+#MARKPASS.willbes-Layer-Black,
+#EDITPASS.willbes-Layer-Black {
+    background: none;
+    position: relative;
+}
+#MARKPASS.willbes-Layer-Black:after,
+#EDITPASS.willbes-Layer-Black:after {
+    content: '';
+    display: block;
+    background: rgba(0, 0, 0, 0.6);
+    filter: alpha(opacity=60);
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+/* ================================================== */
+
 .willbes-Layer-Box {
     display: none;
     background: #fff;
@@ -7667,9 +7688,10 @@ table.PassZoneTable .w-data {
 }
 .willbes-Layer-PassBox1100.h920.fix {
     margin-top: -460px;
-    margin-left: -550px; 
+    margin-left: -470px; 
     border: 1px solid #2f2f2f;
     z-index: 110; 
+    position: absolute;
 }
 
 /* subContainer : Mypage : 무한PASS존 : willbes-Mypage-PASSZONE : willbes-Layer-PassBox : PASSZONE-List */
@@ -8144,6 +8166,13 @@ table.PassZoneTable .w-data {
 }
 .EditWriteTable ul.attach li .filetype .file-text {
     width: 390px;
+}
+
+/* subContainer : Mypage : 무한PASS존 : 첨삭 강좌 : 채점결과 */
+.editDetailWrap .tabBox .tabLink {
+    height: 610px;
+    overflow-x: hidden;
+    overflow-y: auto;
 }
 
 /* subContainer : Mypage : 무한PASS존 : 채점결과 */
