--- a/public/css/willbes/basic.css
+++ b/public/css/willbes/basic.css
@@ -269,7 +269,8 @@ body {
 	font-size: 12px;
 	line-height: 1;
 	font-family: "굴림", "Gulim", "돋움", "Dotum", "Helvetica", "Apple SD Gothic Neo", "sans-serif";
-	min-width: 1300px;
+  min-width: 1300px;
+  word-break: break-all;
 }
 body#widthFrame {
   min-width: 100%;
