--- a/public/css/lcms/custom.css
+++ b/public/css/lcms/custom.css
@@ -81,7 +81,8 @@ body.no_sidebar {
     padding-right: 0;
 }
 .top_col .main_top_menu .nav-tabs li {
-    min-width: 90px;
+    min-width: 72px;
+    margin-left: 3px;
 }
 .top_col .nav-tabs li.dropdown .dropdown-menu {
     margin-top: -1px;
